added maps and stuff

--- a/app/views/heroes/Ana.html.erb
+++ b/app/views/heroes/Ana.html.erb
@@ -1,2 +1,7 @@
-<h1>Heroes#Ana</h1>
-<p>Find me in app/views/heroes/Ana.html.erb</p>
+<% provide(:title, "Ana") %>
+
+<h1>Ana</h1>
+<div id="lore-div">
+</div>
+<div id="stats-div">
+</div>
