--- a/app/views/heroes/Brigitte.html.erb
+++ b/app/views/heroes/Brigitte.html.erb
@@ -1,2 +1,4 @@
-<h1>Heroes#Brigitte</h1>
+<% provide(:title, "Brigitte") %>
+
+<h1>Brigitte</h1>
 <p>Find me in app/views/heroes/Brigitte.html.erb</p>
