--- a/app/views/heroes/Doomfist.html.erb
+++ b/app/views/heroes/Doomfist.html.erb
@@ -1,2 +1,4 @@
-<h1>Heroes#Doomfist</h1>
+<% provide(:title, "Doomfist") %>
+
+<h1>Doomfist</h1>
 <p>Find me in app/views/heroes/Doomfist.html.erb</p>
