--- a/app/views/heroes/Reinhardt.html.erb
+++ b/app/views/heroes/Reinhardt.html.erb
@@ -1,2 +1,4 @@
-<h1>Heroes#Reinhardt</h1>
+<% provide(:title, "Reinhardt") %>
+
+<h1>Reinhardt</h1>
 <p>Find me in app/views/heroes/Reinhardt.html.erb</p>
