--- a/app/views/heroes/Soldier76.html.erb
+++ b/app/views/heroes/Soldier76.html.erb
@@ -1,2 +1,4 @@
-<h1>Heroes#Soldier76</h1>
+<% provide(:title, "Soldier: 76") %>
+
+<h1>Soldier: 76</h1>
 <p>Find me in app/views/heroes/Soldier76.html.erb</p>
