--- a/app/views/heroes/Torbjorn.html.erb
+++ b/app/views/heroes/Torbjorn.html.erb
@@ -1,2 +1,4 @@
-<h1>Heroes#Torbjorn</h1>
+<% provide(:title, "Torbjorn") %>
+
+<h1>Torbjorn</h1>
 <p>Find me in app/views/heroes/Torbjorn.html.erb</p>
