--- a/app/views/heroes/Widowmaker.html.erb
+++ b/app/views/heroes/Widowmaker.html.erb
@@ -1,2 +1,4 @@
-<h1>Heroes#Widowmaker</h1>
+<% provide(:title, "Widowmaker") %>
+
+<h1>Widowmaker</h1>
 <p>Find me in app/views/heroes/Widowmaker.html.erb</p>
