--- a/app/views/heroes/Zenyatta.html.erb
+++ b/app/views/heroes/Zenyatta.html.erb
@@ -1,2 +1,4 @@
-<h1>Heroes#Zenyatta</h1>
+<% provide(:title, "Zenyatta") %>
+
+<h1>Zenyatta</h1>
 <p>Find me in app/views/heroes/Zenyatta.html.erb</p>
