--- a/app/views/heroes/Symmetra.html.erb
+++ b/app/views/heroes/Symmetra.html.erb
@@ -1,2 +1,4 @@
-<h1>Heroes#Symmetra</h1>
+<% provide(:title, "Symmetra") %>
+
+<h1>Symmetra</h1>
 <p>Find me in app/views/heroes/Symmetra.html.erb</p>
