--- a/app/views/heroes/Ana.html.erb
+++ b/app/views/heroes/Ana.html.erb
@@ -2,6 +2,47 @@
 
 <h1>Ana</h1>
 <div id="lore-div">
+  <p>Ana is an adorable old lady who likes tea and cookies. She is Pharah's mom and is a sniper-bro. She heals.</p>
 </div>
 <div id="stats-div">
+  <ul>
+    <li>Biotic Rifle: Projectile rifle that heals allies and damages enemies. Becomes hitscan when scoped in.
+      <ul>
+        <li>Projectile Speed: ???</li>
+        <li>Heal: 70HP</li>
+        <li>Damage: 80HP</li>
+      </ul>
+    </li>
+    <li>Sleep Dart: Projectile dart that puts enemy to sleep.
+      <ul>
+        <li>Projectile Speed: ???</li>
+        <li>Damage: 5HP</li>
+        <li>Duration: 5s</li>
+      </ul>
+    </li>
+    <li>Bionic Grenade: Throwable jar that heal allies and damages enemies, as well as heal boost for allies and prevents healing on enemies.
+      <ul>
+        <li>Projectile Speed: ???</li>
+        <li>Healing: 70HP</li>
+        <li>Heal Boost: 20%</li>
+        <li>Damage: 80HP</li>
+        <li>Duration: 5s</li>
+      </ul>
+    </li>
+    <li>Nano Boost (Ultimate): Heals 300HP instantly to ally, reduces damage taken, and boosts damage.
+      <ul>
+        <li>Projectile Speed: ???</li>
+        <li>Healing: 300HP</li>
+        <li>Heal Boost: 20%</li>
+        <li>Damage: 80HP</li>
+        <li>Duration: 10s</li>
+      </ul>
+    </li>
+  </ul>
+</div>
+<div id="synergies-div">
+  <p>Tanky teams</p>
+</div>
+<div id="tips-div">
+  <p>git gud</p>
 </div>
