--- a/app/views/heroes/Ana.html.erb
+++ b/app/views/heroes/Ana.html.erb
@@ -2,9 +2,11 @@
 
 <h1>Ana</h1>
 <div id="lore-div">
+  <h2>All About Ana</h2>
   <p>Ana is an adorable old lady who likes tea and cookies. She is Pharah's mom and is a sniper-bro. She heals.</p>
 </div>
 <div id="stats-div">
+  <h2>Character Stats</h2>
   <ul>
     <li>Biotic Rifle: Projectile rifle that heals allies and damages enemies. Becomes hitscan when scoped in.
       <ul>
@@ -35,14 +37,17 @@
         <li>Healing: 300HP</li>
         <li>Heal Boost: 20%</li>
         <li>Damage: 80HP</li>
+        <li>Damage Reduction: 50%</li>
         <li>Duration: 10s</li>
       </ul>
     </li>
   </ul>
 </div>
 <div id="synergies-div">
+  <h2>Synergies</h2>
   <p>Tanky teams</p>
 </div>
 <div id="tips-div">
+  <h2>Tips & Tricks</h2>
   <p>git gud</p>
 </div>
