--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,8 @@
 <% provide(:title, "Overwatch Guide") %>
 
+<div class="row">
 <h1>Overwatch Guide</h1>
 <p>Welcome to our Overwatch Guide. This was a pet project that is supposed to be a game knowledge guide for
   the game Overwatch by Blizzard. Hope you enjoy.</p>
 
+</div>
