--- a/app/views/heroes/Ana.html.erb
+++ b/app/views/heroes/Ana.html.erb
@@ -2,33 +2,65 @@
 
 <h1>Ana</h1>
 <div id="lore-div">
-  <h2>All About Ana</h2>
+  <h2>All About Ana - Lore</h2>
   <p>Ana is an adorable old lady who likes tea and cookies. She is Pharah's mom and is a sniper-bro. She heals.</p>
+  <ul>
+    <li>Name: Ana Amari</li>
+    <li>Age: 60</li>
+    <li>Home: Cairo, Egypt</li>
+    <li>Relation to Overwatch: Former second in command, now a bounty hunter on the run</li>
+  </ul>
 </div>
 <div id="stats-div">
   <h2>Character Stats</h2>
   <ul>
-    <li>Biotic Rifle: Projectile rifle that heals allies and damages enemies. Becomes hitscan when scoped in.
+    <li>Biotic Rifle: Linear projectile rifle that heals allies and damages enemies. Becomes hitscan when scoped in.
       <ul>
-        <li>Projectile Speed: ???</li>
-        <li>Heal: 70HP</li>
-        <li>Damage: 80HP</li>
+        <li>Heal: 75HP</li>
+        <li>Damage: 70HP</li>
+        <li>Projectile Speed: 125 m/s</li>
+        <li>Rate of Fire: 1 shot every 0.8 seconds, 1.25 shots per second</li>
+        <li>Clip Size: 14</li>
+        <li>Reload Time: 1.5 s</li>
+        <li>Cast Time: 0.25 seconds scoping in, 0.16 seconds scoping out</li>
+        <li>Duration: 0.85 s (shots are heal/damage over time, not burst)</li>
+        <li>Can Headshot: No</li>
+        <li>Other Info:
+          <ul>
+            <li>Shots pass through full health allies and do not affect them.</li>
+            <li>Scoped shots leave a tracer behind.</li>
+          </ul>
+        </li>
       </ul>
     </li>
-    <li>Sleep Dart: Projectile dart that puts enemy to sleep.
+    <li>Sleep Dart: Linear projectile dart that puts enemy to sleep.
       <ul>
-        <li>Projectile Speed: ???</li>
         <li>Damage: 5HP</li>
-        <li>Duration: 5s</li>
+        <li>Duration: 6 s unless interrupted</li>
+        <li>Projectile Speed: 60 m/s</li>
+        <li>Cooldown: 12 s</li>
+        <li>Can Headshot: No</li>
+        <li>Other Info:
+          <ul>
+            <li>If a sleeping target takes damage, the target will wake up prematurely in 0.5 seconds.</li>
+          </ul>
+        </li>
       </ul>
     </li>
-    <li>Bionic Grenade: Throwable jar that heal allies and damages enemies, as well as heal boost for allies and prevents healing on enemies.
+    <li>Bionic Grenade: Throwable jar (arcing projectile) that heal allies and damages enemies, as well as heal boost for allies and prevents healing on enemies.
       <ul>
-        <li>Projectile Speed: ???</li>
-        <li>Healing: 70HP</li>
-        <li>Heal Boost: 20%</li>
-        <li>Damage: 80HP</li>
-        <li>Duration: 5s</li>
+        <li>Healing: 100HP</li>
+        <li>Damage: 60HP</li>
+        <li>Projectile Speed: 30 m/s</li>
+        <li>Heal Boost: 50%</li>
+        <li>Area of Effect: 4 m</li>
+        <li>Duration: 4 s</li>
+        <li>Can Headshot: No</li>
+        <li>Other Info:
+          <ul>
+            <li>Affected allies receive 50% additional healing, including from Health Packs.</li>
+            <li>Affected enemies cannot be healed.</li>
+            <li>Since the regeneration of shields is treated as a form of healing, allies regenerate their shields 50% faster and enemies cannot regenerate their shields at all, until the effect wears off.</li>
       </ul>
     </li>
     <li>Nano Boost (Ultimate): Heals 300HP instantly to ally, reduces damage taken, and boosts damage.
